# django_project

./: .project  .travis.yml  celery_results.sqlite3  pyproject.toml  requirements.txt
djangoProject/: celery.py  middleware.py  settings.py  urls.py
files/: index.html
home/: admin.py  emails.py  forms.py  models.py  serializers.py  signals.py  tasks.py  tests.py  views.py
home/migrations/: 0001_initial.py  0002_student_social_url.py  0003_auto_20201224_1348.py  0004_auto_20201224_1349.py  0005_auto_20210107_1416.py  0006_auto_20210111_1256.py  0007_auto_20210111_1332.py  0008_auto_20210111_1342.py  0009_auto_20210111_1343.py  0010_auto_20210111_1344.py  0011_auto_20210111_1353.py  0012_auto_20210111_1651.py  0013_auto_20210111_1652.py  0014_auto_20210113_1856.py  0015_auto_20210113_1912.py  0016_auto_20210114_1147.py  0017_auto_20210114_1218.py  0018_auto_20210114_1223.py  0019_auto_20210114_1226.py  0020_auto_20210114_1226.py  0021_currency.py  0022_student_picture.py  0023_auto_20210312_1933.py  0024_auto_20210312_1947.py  0025_auto_20210312_1951.py  0026_auto_20210312_1952.py  0027_auto_20210312_1953.py  0028_auto_20210312_1957.py  0029_auto_20210312_1959.py  0030_auto_20210312_2006.py  0031_auto_20210312_2030.py  0032_auto_20210325_1907.py  0033_auto_20210329_1633.py
home/templates/: add_student.html  base.html  book_info.html  book_list.html  email.html  index.html  send_email.html  sign_in.html  sign_up.html  student_add.html  student_delete.html  student_list.html  student_update.html  subject_info.html  subject_list.html  teacher_add.html  teacher_info.html  (+2 more)
(+2 files in other folders)
