[tool.poetry]
name = "django_hw05"
version = "0.1.0"
description = ""
authors = ["Kateryna Bakhchedzhy <k.bakhchedzhy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
gender-guesser = "^0.4.0"
Faker = "^5.4.0"
celery = "^5.0.5"
django-filter = "^2.4.0"
requests = "^2.25.1"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
flake8 = "3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
